--- a/style.css
+++ b/style.css
@@ -9,13 +9,27 @@ html{
     font-family: 'Montserrat', sans-serif;
 }
 .container{
-    min-height: 40vh;
+    min-height: 60vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: lemonchiffon;
    
 }
+.add{
+    padding: 20px;
+    border-radius: 12px;
+    background-color: white;
+    font-size: 16px;
+    color: grey;
+    border: 2px solid black;
+}
+.add:hover{
+    background-color: black;
+    border: white;
+    color: white;
+}
+    
 
 .form{
     display: none;
@@ -29,8 +43,9 @@ html{
 }
 
 .newForm{
-    width: 30%;
-    padding: 20px;
+    height: 90%;
+    width: 20%;
+    padding: 30px;
     margin-left: -100px;
     display: flex;
     justify-content: center;
