--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html{
     justify-content: center;
     align-items: center;
     background-color: lemonchiffon;
+    position: relative;
    
 }
 .add{
@@ -43,19 +44,55 @@ html{
 }
 
 .newForm{
-    height: 90%;
-    width: 20%;
-    padding: 30px;
-    margin-left: -100px;
+    padding: 40px;
+    margin-left: -150px;
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: black;
+    background-color: lightblue;
     color: white;
-    border-radius: 8px;
+    border-radius: 12px;
     text-align: center;
-    
 }
 .rd{
     background-color: red;
+}
+.heading{
+    margin-bottom: 10px;
+}
+.middle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    margin: 20px 0;
+    gap: 15px;
+}
+label{
+font-size: 18px;
+padding: 8px;
+}
+input{
+    padding: 5px;
+    border-radius: 8px;
+    background-color:
+#fffdd0;
+color: black;
+    text-align: center;
+    border: none;
+    font-size: 16px;
+}
+.save{
+    padding: 10px 30px;
+    border-radius: 8px;
+    background-color: lightblue;
+    color: black;
+    font-size: 18px;
+    cursor: pointer;
+    border: 2px solid #fffdd0;
+}
+.save:hover{
+    background-color: #fffdd0;
+    
 }
