--- a/style.css
+++ b/style.css
@@ -8,12 +8,18 @@
 html{
     font-family: 'Montserrat', sans-serif;
 }
+body{
+    position: relative;
+    background-color: lemonchiffon;
+}
 .container{
-    min-height: 60vh;
+    min-height: 50vh;
     display: flex;
     justify-content: center;
-    align-items: center;
-    background-color: lemonchiffon;
+    
+    
+    padding: 20px;
+    
     position: relative;
    
 }
@@ -45,7 +51,7 @@ html{
 
 .newForm{
     padding: 40px;
-    margin-left: -150px;
+    
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -54,6 +60,7 @@ html{
     color: white;
     border-radius: 12px;
     text-align: center;
+    position: absolute;
 }
 .rd{
     background-color: red;
@@ -94,5 +101,5 @@ color: black;
 }
 .save:hover{
     background-color: #fffdd0;
-    
+
 }
