--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html{
 body{
     position: relative;
     background-color: lemonchiffon;
+    position: relative;
 }
 .container{
     min-height: 40vh;
@@ -51,9 +52,7 @@ body{
 
 .newForm{
     padding: 40px;
-    
-    display: flex;
-    flex-direction: row;
+    display: flex;  
     justify-content: center;
     align-items: center;
     background-color: lightblue;
@@ -61,6 +60,9 @@ body{
     border-radius: 12px;
     text-align: center;
     position: absolute;
+    top: 30%;
+    left: 35%;
+   
 }
 .default{
     padding: 10px 0;
