--- a/style.css
+++ b/style.css
@@ -9,33 +9,37 @@ html{
     font-family: 'Montserrat', sans-serif;
 }
 body{
-    position: relative;
     background-color: lemonchiffon;
-    position: relative;
+    
+    
 }
+
 .container{
-    min-height: 40vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    min-height: 100vh;
     
-    
-    padding: 20px;
-    
-    position: relative;
    
+    
+    
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    padding: 40px;
+    border-bottom: 3px solid lightblue;
+   
+    
 }
 .add{
     padding: 20px;
     border-radius: 12px;
-    background-color: white;
     font-size: 16px;
-    color: grey;
     border: 2px solid black;
 }
 .add:hover{
-    background-color: black;
-    border: white;
-    color: white;
+    border: 2px solid lightblue;
 }
     
 
@@ -51,6 +55,7 @@ body{
 }
 
 .newForm{
+    
     padding: 40px;
     display: flex;  
     justify-content: center;
@@ -123,10 +128,8 @@ color: black;
 
 }
 .cardContainer{
-    min-height: 50vh;
     display: flex;
     justify-content: center;
-    
     padding: 20px;
     flex-wrap: wrap;
     flex-direction: row;
@@ -134,7 +137,6 @@ color: black;
 }
 .cardContainer>*{
     flex: 0 1 15%;
-    height: 400px;
 }
 .book{
     display: flex;
