--- a/style.css
+++ b/style.css
@@ -46,6 +46,8 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
+   
 }
 
 .newForm{
@@ -162,15 +164,14 @@ button{
     cursor: pointer;
 }
 .error{
-    
     border: 2px solid red;
-}
-.errorMsg{
-    margin-bottom: 20px;
-    color: red;
-    font-size: 16px;
-    transition: 2.5s ease all;
 }
 .msg{
     display: none;
+}
+h4{
+    color: red;
+    font-size: 12px;
+    resize: none;
+
 }
